# eqoxide

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.sh  config.yaml  cron_tasks.md  dev-run.sh  mock_eq_server.py  oc_prompt_loop.sh  todo.md
.cargo/: config.toml
.github/workflows/: asset-gated-tests.yml  test.yml
.superpowers/sdd/: progress.md  rof2-asset-regen-report.md  rof2-combat-anim-death-report.md  rof2-hair-client-report.md  rof2-hair-converter-report.md  rof2-hair-ears-converter-report.md  rof2-hair-texture-report.md  rof2-inventory-report.md  rof2-movement-anim-report.md  rof2-phase1-report.md  rof2-phase2a-report.md  rof2-phase2b-report.md  rof2-progress.md
bugs/: README.md  auto-combat-ignores-adds-player-dies.md  charcreate-titanium-struct-under-rof2.md  cross-zone-chat-needs-ucs.md  door-spawn-garbage-names-arena.md  gfaydark-platform-pathing-stall.md  inventory-api-missing-currency.md  inventory-currency-garbage-values-rof2.md  inventory-view-desync-after-turnin-cursor-move.md  neriakc-library-pathing-stall.md  new-movement-does-not-cancel-navigation.md  no-death-respawn-handling-stuck-corpse.md  npc-rat-movement-jerky-despite-lerp.md  zone-glb-not-baked-404.md  zone-in-below-floor-burial.md
crates/eqoxide-assets/: Cargo.toml
crates/eqoxide-assets/src/: lib.rs
crates/eqoxide-command/: Cargo.toml
crates/eqoxide-command/src/: chat.rs  combat.rs  group.rs  guild.rs  interact.rs  inventory.rs  lib.rs  lifecycle.rs  merchant.rs  nav.rs  quest.rs  social.rs  trainer.rs
crates/eqoxide-core/: Cargo.toml
crates/eqoxide-core/src/: config.rs  coord.rs  game_state.rs  lib.rs  pet.rs  physics.rs  race_class.rs  region_map.rs  skills.rs  sky.rs  spells.rs  ucs.rs  weather.rs
crates/eqoxide-crash/: Cargo.toml
crates/eqoxide-crash/src/: lib.rs
crates/eqoxide-crash/tests/: crash_signals.rs
crates/eqoxide-http/: Cargo.toml
crates/eqoxide-http/src/: chat.rs  combat.rs  events.rs  group.rs  interact.rs  inventory.rs  lib.rs  lifecycle.rs  merchant.rs  move_api.rs  name_match.rs  observe.rs  pet.rs  quests.rs  social.rs  testkit.rs  trainer.rs
crates/eqoxide-ipc/: Cargo.toml
crates/eqoxide-ipc/src/: lib.rs  result.rs
crates/eqoxide-nav/: Cargo.toml
crates/eqoxide-nav/src/: collision.rs  diagnostics.rs  lib.rs  planner.rs  steering.rs  traversability.rs  walker.rs  water_grid.rs  zone_assets.rs
crates/eqoxide-net/: Cargo.toml
crates/eqoxide-net/src/: action_loop.rs  gameplay.rs  item.rs  lib.rs  login.rs  packet_handler.rs  packet_telemetry.rs  transport.rs  ucs.rs
crates/eqoxide-protocol/: Cargo.toml
crates/eqoxide-protocol/src/: lib.rs  wire.rs
crates/eqoxide-protocol/src/protocol/: combat.rs  group.rs  inventory.rs  mod.rs  spells.rs  tasks.rs  trade.rs  world.rs
crates/eqoxide-renderer/: Cargo.toml
crates/eqoxide-renderer/src/: anim.rs  billboard.rs  camera.rs  frame_capture.rs  gpu.rs  lib.rs  models.rs  nav_overlay.rs  pass.rs  pipeline.rs  renderer.rs  scene.rs
crates/eqoxide-renderer/src/shaders/: billboard.wgsl  character.wgsl  character_skinned.wgsl  nav_debug.wgsl  shadow.wgsl  skin_probe.wgsl  sky.wgsl  weather.wgsl  zone.wgsl  zone_instanced.wgsl
crates/eqoxide-renderer/tests/: nav_debug_shader.rs  shadow_shader.rs  weather_shader.rs
crates/eqoxide-telemetry/: Cargo.toml
crates/eqoxide-telemetry/src/: lib.rs
crates/eqoxide-ui/: Cargo.toml
crates/eqoxide-ui/src/: chrome.rs  icons.rs  lib.rs  persist.rs  registry.rs  theme.rs  widgets.rs
crates/eqoxide-ui/src/windows/: actions.rs  casting.rs  chat.rs  compass.rs  group.rs  help.rs  inventory.rs  loot.rs  map.rs  merchant.rs  npc_dialogue.rs  options.rs  pet.rs  player.rs  quest_journal.rs  selector.rs  skills.rs  spellbook.rs  spellgems.rs  target.rs  trainer.rs
docs/: architecture.md  autonomous-play.md  character-models.md  collision-system.md  dev-workflow.md  equipment-textures-findings.md  equipment_texture_plan.md  http-api.md  npc-interaction.md  plan-standalone-gm-client.md  protocol-notes.md  rof2-migration.md  south_qeynos_coordinates.md  ui-overhaul-design.md  ui-window-management.md  zone-rendering.md
docs/eq-technical-knowledgebase/: animation-codes.md  boats-and-vehicles.md  book-reading.md  character-creation.md  classic-vs-luclin-model-selection.md  combat-damage-struct.md  consider-protocol.md  doors.md  eq-chat-wire-format-and-routing.md  eqg-character-models.md  eqg-ship-models.md  eqstr-nested-string-ids.md  eqstream-reliable-retransmit.md  falling-physics.md  flight-levitate-and-flymode.md  floor-resolution-and-thin-platforms.md  friends-list-and-who.md  group-protocol.md  guild-protocol.md  hair-color.md  held-item-attachment.md  hp-update.md  item-icon-atlas.md  item-serialization.md  kelethin-lift-and-doors.md  logout-protocol.md  loot-protocol.md  luclin-character-textures.md  luclin-head-faces-and-hair.md  merchant-buy-protocol.md  merchant-open-protocol.md  merchant-trading.md  npc-trade-finish-ordering.md  opcode-direction.md  opcodes.md  packet-telemetry-hook-points.md  player-movement-collision.md  player-movement-speed.md  position-update-wire-format.md  (+21 more)
scripts/: check-no-local-detail.sh  check-wrapped-literals.py  packet-analysis.py
src/: anim.rs  app.rs  asset_sync.rs  assets.rs  billboard.rs  camera.rs  camera_state.rs  config.rs  coord.rs  crash.rs  debug_zone.rs  eqstr.rs  frame_capture.rs  game_state.rs  gpu.rs  head.rs  http.rs  hud.rs  ipc.rs  lib.rs  logging.rs  main.rs  model.rs  models.rs  movement.rs  navmesh.rs  pass.rs  pipeline.rs  profiling.rs  quests.rs  region_map.rs  renderer.rs  scene.rs  spells.rs  traversability.rs  ui_layout.rs  water_map.rs  zone_map.rs
src/command_state/: camera.rs  (+14 more)
tests/: asset_sync_live.rs  entity_pose_643.rs  fog_shader.rs  http_observe_apply.rs  net_thread_death_reaches_http.rs  synthetic_goal_append.rs  synthetic_walk_profile.rs  synthetic_water_capability.rs  walker_sim.rs  water_capability.rs
tools/: Cargo.toml  import_models.sh  navpath.py  quest_finder.py  regen_models.sh
tools/src/: diagnose_glb.rs  main.rs  navmesh_validate.rs  probe_normals.rs  validate_glb.rs
(+85 files in other folders)
