[package]
name = "eqoxide"
version = "0.1.0"
edition = "2021"

[lib]
name = "eqoxide"
path = "src/lib.rs"

[[bin]]
name = "eqoxide"
path = "src/main.rs"

[[bin]]
name = "render_model"
path = "src/bin/render_model.rs"

[dependencies]
anyhow = "1"
arc-swap = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "dds", "tga"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wgpu = "22"
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
serde_yaml = "0.9"
shellexpand = "3"
gltf = { version = "1", features = ["import", "extras"] }
rand = "0.8"
byteorder = "1.5"
miniz_oxide = "0.8"
des = "0.8"
cbc = "0.1"
axum = "0.7"
ureq = { version = "2", features = ["json"] }
blake3 = "1"
dirs = "5"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
tower = "0.5"

[workspace]
members = ["tools"]
