[package]
name = "eqoxide"
version = "0.1.0"
edition = "2021"

[lib]
name = "eqoxide"
path = "src/lib.rs"

[[bin]]
name = "eqoxide"
path = "src/main.rs"

[[bin]]
name = "render_model"
path = "src/bin/render_model.rs"

[dependencies]
eqoxide-core = { path = "crates/eqoxide-core" }
eqoxide-ipc = { path = "crates/eqoxide-ipc" }
eqoxide-assets = { path = "crates/eqoxide-assets" }
eqoxide-nav = { path = "crates/eqoxide-nav" }
eqoxide-command = { path = "crates/eqoxide-command" }
eqoxide-crash = { path = "crates/eqoxide-crash" }
eqoxide-protocol = { path = "crates/eqoxide-protocol" }
eqoxide-telemetry = { path = "crates/eqoxide-telemetry" }
eqoxide-http = { path = "crates/eqoxide-http" }
anyhow = "1"
arc-swap = "1"
image = { version = "0.25", default-features = false, features = ["bmp", "png", "dds", "tga"] }
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wgpu = "22"
winit = "0.30"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
serde_yaml = "0.9"
shellexpand = "3"
gltf = { version = "1", features = ["import", "extras"] }
rand = "0.8"
byteorder = "1.5"
miniz_oxide = "0.8"
des = "0.8"
cbc = "0.1"
axum = "0.7"
ureq = { version = "2", features = ["json"] }
blake3 = "1"
dirs = "5"
signal-hook = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
# Enable eqoxide-core's test-fixture constructors (RegionMap::flat_below/water_slab/…) for THIS
# crate's test build — they're `#[cfg(test)]` in core, so invisible across the crate boundary
# otherwise. Dev-deps' features don't activate in normal release builds.
eqoxide-core = { path = "crates/eqoxide-core", features = ["test-fixtures"] }
# Same reasoning as eqoxide-core above, for `CommandState::goto_target` (#544 Step 2g).
eqoxide-command = { path = "crates/eqoxide-command", features = ["test-fixtures"] }
# Same reasoning as eqoxide-core above, for `test_capture_lock` — `src/http/observe.rs`'s
# `/v1/observe/packets` tests need the same global capture-serialization lock the telemetry
# crate's own unit tests use (#544 Step 2k).
eqoxide-telemetry = { path = "crates/eqoxide-telemetry", features = ["test-fixtures"] }
# Enable eqoxide-http's `testkit` (its `HttpState` builder + `set_gs`/`debug_json`, otherwise
# `#[cfg(test)]`) for THIS crate's integration-test build — `tests/http_observe_apply.rs` needs it to
# build an `HttpState` and hit the observe router while calling this crate's `eq_net::packet_handler`
# apply fns (the app crate sits ABOVE eqoxide-http, so those tests can't live inside it) (#544 Step 2l).
eqoxide-http = { path = "crates/eqoxide-http", features = ["test-fixtures"] }
# Pinned to the exact version wgpu 22 already pulls in transitively (see Cargo.lock) so this
# doesn't add a second naga to the dependency graph. Used only to parse+validate the zone
# shaders' WGSL source in tests/fog_shader.rs — no GPU device required.
naga = { version = "=22.1.0", features = ["wgsl-in"] }
# `test-util` (not in tokio's `full`) enables `#[tokio::test(start_paused = true)]` so the A3
# merchant-buy timeout test (#448) exercises the real 4s elapse in virtual time — instantly.
tokio = { version = "1", features = ["full", "test-util"] }
tower = "0.5"

[workspace]
members = ["tools", "crates/eqoxide-core", "crates/eqoxide-ipc", "crates/eqoxide-assets", "crates/eqoxide-nav", "crates/eqoxide-command", "crates/eqoxide-crash", "crates/eqoxide-protocol", "crates/eqoxide-telemetry", "crates/eqoxide-http"]
